2003-03-13  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/atlas_eth_drivers.cdl:
	Changed CYGPKG_DEVS_ETH_ARM_ATLAS_OPTIONS to
	CYGPKG_DEVS_ETH_MIPS_ATLAS_OPTIONS. 

	* src/if_atlas.c (atlas_saa9730_init): ifdeffed out bogus code to
	set MAC address in non-redboot configuration just to make it
	compile. Note that there are other problems with this driver in
	eCos.

2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/if_atlas.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2001-10-18  Jonathan Larmour  <jlarmour@redhat.com>

	* src/if_atlas.c: net_debug is no longer used.

2001-10-05  Jesper Skov  <jskov@redhat.com>

	* src/if_atlas.c: Use new HAL endian conversion macros.

	* src/saa9730.h: Deleted endian conversion macros.

2001-02-15  Nick Garnett  <nickg@cygnus.co.uk>

	* src/saa9730.h: 
	* src/if_atlas.c:
	Added support for getting RX interrupts. This is solely for the
	purposes of doing Ctrl-C processing in RedBoot, more work would be
	needed to get full eCos driver support going.

2001-01-30  Gary Thomas  <gthomas@redhat.com>

	* src/if_atlas.c: New RedBoot config data layout.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//